--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 University College, Oxford, to study physics. Seeking a PhD at
                 University of Cambridge, Hawking was disappointed to learn that the
                 esteemed astronomer Fred Hoyle – who is now famous for coining the
-                term <span class="R"><a href="https://big-bang.techshock.repl.co/" target="_blank" style="color: red;">'
-                        Big Bang' </a></span> theory by mocking it on radio
+                term <span class="R">'
+                        Big Bang'</span> theory by mocking it on radio
                 – wouldn't be taking any more students. His supervisor was a
                 relatively unknown researcher by the name of Dennis Sciama. What
                 Sciama lacked in fame he more than made up for in mentorship,
